ingress-itop.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: itop
  namespace: default
spec:

  rules:
  - host: itop.divdevops.xyz
    http:
      paths:
      - backend:
          serviceName: itop
          servicePort: 8000
        path: /
